k8s/lab4/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-frontend-egress
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Egress
  egress: # zakomentuj, aby wyłączyć ruch sieciowy wychodzący z frontendu
    - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-server-network-policy
spec:
  podSelector:
    matchLabels:
      tier: backend
      app: python-flask
  policyTypes:
  - Ingress
  ingress:
    - ports:
      - protocol: TCP
        port: 80 # zmień aby zobaczyć czy ruch sieciowy został przerwany
